--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,3 @@
-.maintitle {
-    color: black;
-    background-color: white;
-    text-align: center;
-}
-
-.social-links{
-    color: pink;
-    text-align: center;
-    width: 1000px;
-}
-
 .navbar ul {
     list-style-type: none;
     margin: 0;
@@ -33,6 +21,13 @@
 
 .navbar ul li a:hover {
     background-color: #111;
+}
+
+.recipelist ul{
+    list-style-type: none;
+    margin: 10;
+    padding: 10;
+    width: 300px;
 }
 
 
