Added New otherpages directory otherpages now holds my about.html page Added the about page to the navbar Linked about.html to the stylesheet and added its navbar

--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,11 @@
     background-color: #111;
 }
 
+.navbar ul li .rightalign {
+    position: absolute;
+    right: 0;
+}
+
 .recipelist ul{
     list-style-type: none;
     margin: 10;
