--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 .navbar ul {
+    width: 100%;
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -8,7 +9,7 @@
 
 .navbar ul li {
     float: left;
-    font-size: 28px;
+    font-size: 4vw;
 }
 
 .navbar ul li a {
