--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+/* Navbar Components */
+
 .navbar ul {
     width: 100%;
     list-style-type: none;
@@ -24,16 +26,43 @@
     background-color: #111;
 }
 
-.navbar ul li .rightalign {
+.navbar ul li .navabout {
     position: absolute;
     right: 0;
 }
+
+/* Landing Page */
 
 .recipelist ul{
     list-style-type: none;
     margin: 10;
     padding: 10;
     width: 300px;
+}
+
+/* Recipe Pages */
+
+.recipename {
+    color: black;
+    text-align: center;
+    font-size: 5vw;
+}
+
+.container {
+    margin: 20px 20px 0 0;
+    overflow: auto;
+    border: 5px solid #333;
+}
+
+.recipeimage img{
+    float: left;
+    width: 40%;
+    height: auto;
+}
+
+.ingredientslist {
+    float: left;
+    margin: 10px;
 }
 
 
