Removed default body margin

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,12 @@
+body {
+    margin: 0;
+}
+
 /* Navbar Components */
 
 .navbar {
-    width: 110%;
-    margin: -10px;
+    width: 100%;
+    margin: 0;
     padding: 0;
     border: 0;
 }
