--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ body {
 
 .flexleft a, .flexright a {
     text-decoration: none;
-    font-size: 100px;
+    font-size: 4vw;
     color: white;
     align-self: center;
 }
