--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,10 @@ body {
 .flexbar {
     background-color: #333;
     display: flex;
+    height: 5vw;
+    -webkit-justify-content: flex-end;
+    align-items: flex-end;
+    -webkit-align-items: flex-end;
     /* 
     justify-content: center;
     align-items: center;
