--- a/styles.css
+++ b/styles.css
@@ -7,25 +7,13 @@ body {
 .flexbar {
     background-color: #333;
     display: flex;
-    height: 10vh;
+    height: 12%;
     position: sticky;
     top: 0;
     width: 100%;
     -webkit-justify-content: flex-end;
     align-items: flex-end;
     -webkit-align-items: flex-end;
-    /* 
-    justify-content: center;
-    align-items: center;
-    */
-}
-
-@media (max-width: 500px) {
-
-    .flexbar {
-          height: 4vh;
-     }
-
 }
 
 .flexleft, .flexright{
@@ -46,6 +34,10 @@ body {
     align-self: center;
 }
 
+.flexleft a:hover, .flexright a:hover {
+    color: grey;
+}
+
 .flexright a, .flexright img {
     float: right;
     margin: 1%;
@@ -56,8 +48,23 @@ body {
 }
 
 .flexright img {
-    width: 3vw;
+    width: 4vw;
     height: auto;
+}
+
+@media (max-width: 650px) {
+
+    .flexbar {
+          height: 4vh;
+    }
+
+    .flexleft a {
+        font-size: 6vw;
+    }
+
+    .flexright a {
+        font-size: 5vw;
+    }
 }
 
 /* Landing Page */
